--- a/src/StoreAdministrationSystem.DataAccess.PostgresSql/StoreAdministrationSystem.DataAccess.PostgresSql.csproj
+++ b/src/StoreAdministrationSystem.DataAccess.PostgresSql/StoreAdministrationSystem.DataAccess.PostgresSql.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +22,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StoreAdministrationSystem.DataAccess\StoreAdministrationSystem.DataAccess.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
