--- a/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
+++ b/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StoreAdministrationSystem.DataAccess.PostgresSql\StoreAdministrationSystem.DataAccess.PostgresSql.csproj" />
+    <ProjectReference Include="..\StoreAdministrationSystem.ReadModel.PostgresSql\StoreAdministrationSystem.ReadModel.PostgresSql.csproj" />
+  </ItemGroup>
+
 </Project>
