--- a/src/StoreAdministrationSystem.Api/StoreAdministrationSystem.Api.csproj
+++ b/src/StoreAdministrationSystem.Api/StoreAdministrationSystem.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
 	  <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1" />
