--- a/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
+++ b/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="OneOf" Version="3.0.263" />
   </ItemGroup>
 
   <ItemGroup>
