--- a/src/StoreAdministrationSystem.ReadModel.PostgresSql/StoreAdministrationSystem.ReadModel.PostgresSql.csproj
+++ b/src/StoreAdministrationSystem.ReadModel.PostgresSql/StoreAdministrationSystem.ReadModel.PostgresSql.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StoreAdministrationSystem.ReadModel\StoreAdministrationSystem.ReadModel.csproj" />
+  </ItemGroup>
+
 </Project>
