Fix contexts and add framework

--- a/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
+++ b/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\StoreAdministrationSystem.ReadModel.PostgresSql\StoreAdministrationSystem.ReadModel.PostgresSql.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Framework\QueryComponents\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
