--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,43 @@
 version: '3.8'
 
 services:
+  store-administration-system-api:
+    container_name: store-administration-system-api
+    image: store-administration-system-api
+    environment:
+      ConnectionStrings:postgres:
+        Host=pg;Port=5432;
+        Database=store_administration_system;
+        User Id=app;Password=password;
+        Pooling=true;
+        Minimum Pool Size=5;
+        Maximum Pool Size=30;
+        Include Error Detail=true;
+        Application Name=store-administration-system-api [pg];
+      Serilog:Filter:0:Name: ByExcluding
+      Serilog:Filter:0:Args:expression: RequestPath like '/swagger%'
+      Serilog:Filter:1:Name: ByExcluding
+      Serilog:Filter:1:Args:expression: RequestPath like '%.ico'
+      Serilog:Filter:2:Name: ByExcluding
+      Serilog:Filter:2:Args:expression: RequestPath like '/hc%'
+      Serilog:Filter:3:Name: ByExcluding
+      Serilog:Filter:3:Args:expression: RequestPath like '/health%'
+      Serilog:Filter:4:Name: ByExcluding
+      Serilog:Filter:4:Args:expression: RequestPath like '/metrics%'
+      Serilog:Filter:5:Name: ByExcluding
+      Serilog:Filter:5:Args:expression: RequestPath like '/ping%'
+      Serilog:Filter:6:Name: ByExcluding
+      Serilog:Filter:6:Args:expression: RequestPath like '/api-docs%'
+      Serilog:WriteTo:0:Name: Async
+      Serilog:WriteTo:0:Args:configure:0:Name: Console
+      Serilog:WriteTo:0:Args:configure:0:Args:formatter: Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact
+    build:
+      context: .
+      dockerfile: src/StoreAdministrationSystem.Api/Dockerfile
+    depends_on: 
+      store-administration-system-migrator: 
+        condition: service_completed_successfully
+
   store-administration-system-migrator:
     container_name: store-administration-system-migrator
     image: store-administration-system-migrator
@@ -15,9 +52,6 @@ services:
       Serilog:WriteTo:0:Name: Async
       Serilog:WriteTo:0:Args:configure:0:Name: Console
       Serilog:WriteTo:0:Args:configure:0:Args:formatter: Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact
-      Serilog:WriteTo:1:Name: Seq
-      Serilog:WriteTo:1:Args:serverUrl: http://kyc-seq:5341
-      Serilog:WriteTo:1:Args:apiKey: none
     build:
       context: .
       dockerfile: src/StoreAdministrationSystem.Migrator/Dockerfile
