--- a/src/StoreAdministrationSystem.Api/StoreAdministrationSystem.Api.csproj
+++ b/src/StoreAdministrationSystem.Api/StoreAdministrationSystem.Api.csproj
@@ -4,10 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>979078c7-c143-4317-a1a9-cbfeb904b5e7</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	  <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
 	  <PackageReference Include="Serilog.Settings.Configuration" Version="7.0.1" />
