Add some queries and commands

--- a/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
+++ b/src/StoreAdministrationSystem.Application/StoreAdministrationSystem.Application.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\StoreAdministrationSystem.ReadModel.PostgresSql\StoreAdministrationSystem.ReadModel.PostgresSql.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Queries\Products\GetPagedProductListQuery\" />
+  </ItemGroup>
+
 </Project>
