--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,38 @@
 version: '3.8'
 
 services:
+  store-administration-system-admin-api:
+    container_name: store-administration-system-admin-api
+    image: store-administration-system-admin-api
+    environment:
+      Integrations:StoreAdministrationSystem:Address: http://store-administration-system-api
+      Serilog:Filter:0:Name: ByExcluding
+      Serilog:Filter:0:Args:expression: RequestPath like '/swagger%'
+      Serilog:Filter:1:Name: ByExcluding
+      Serilog:Filter:1:Args:expression: RequestPath like '%.ico'
+      Serilog:Filter:2:Name: ByExcluding
+      Serilog:Filter:2:Args:expression: RequestPath like '/hc%'
+      Serilog:Filter:3:Name: ByExcluding
+      Serilog:Filter:3:Args:expression: RequestPath like '/health%'
+      Serilog:Filter:4:Name: ByExcluding
+      Serilog:Filter:4:Args:expression: RequestPath like '/metrics%'
+      Serilog:Filter:5:Name: ByExcluding
+      Serilog:Filter:5:Args:expression: RequestPath like '/ping%'
+      Serilog:Filter:6:Name: ByExcluding
+      Serilog:Filter:6:Args:expression: RequestPath like '/api-docs%'
+      Serilog:WriteTo:0:Name: Async
+      Serilog:WriteTo:0:Args:configure:0:Name: Console
+      Serilog:WriteTo:0:Args:configure:0:Args:formatter: Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact
+    build:
+      context: .
+      dockerfile: src/StoreAdministrationSystem.Admin.Api/Dockerfile
+    ports:
+      - "8001:80"
+    depends_on:
+      store-administration-system-api: 
+        condition: service_started
+
+
   store-administration-system-api:
     container_name: store-administration-system-api
     image: store-administration-system-api
@@ -34,6 +66,8 @@ services:
     build:
       context: .
       dockerfile: src/StoreAdministrationSystem.Api/Dockerfile
+    ports:
+      - "8000:80"
     depends_on: 
       store-administration-system-migrator: 
         condition: service_completed_successfully
