--- a/src/StoreAdministrationSystem.Integration.Client/StoreAdministrationSystem.Integration.Client.csproj
+++ b/src/StoreAdministrationSystem.Integration.Client/StoreAdministrationSystem.Integration.Client.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Refit" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
