--- a/src/StoreAdministrationSystem.Admin.CLient/StoreAdministrationSystem.Admin.CLient.csproj
+++ b/src/StoreAdministrationSystem.Admin.CLient/StoreAdministrationSystem.Admin.CLient.csproj
@@ -11,6 +11,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
 		<PackageReference Include="MudBlazor" Version="6.0.13" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\StoreAdministrationSystem.Admin.Integration.Client\StoreAdministrationSystem.Admin.Integration.Client.csproj" />
+	</ItemGroup>
 	
 	
 </Project>
